# minet

./: README.md  img.txt  mydatalayer.py  solver.prototxt  train_val1.prototxt  vaicompiler.py
AndroidApp/: README.md  build.gradle  local.properties
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/res/layout/: tfe_is_activity_main.xml  (+2 more)
dpuv1/rt/: xdnn_io.py  xdnn_rt_base.py
dpuv1/rt/device/: layer_fpga_pyfunc.py
dpuv1/rt/vitis/: CMakeLists.txt
dpuv1/rt/vitis/include/dpu/: tensor.hpp
dpuv1/rt/vitis/src/dpu/: CMakeLists.txt  tensor.cpp
dpuv1/rt/vitis/src/dpu_test/: CMakeLists.txt  dpu_test_runner.cpp
dpuv1/rt/vitis/test/: CMakeLists.txt
dpuv1/rt/xsnodes/: README.md  base.py  fpga.py  yolopost.py
dpuv1/utils/: Makefile
dpuv1/utils/postproc/: yolo.h
unet-caffe/: README.md  masklist.txt  train.sh
unet-caffe/weight/: _iter_121.caffemodel
unet-tf/: README.md  data.py  main.py
vai/dpuv1/rt/: xdnn_rt.py  xdnn_rt_caffe.py
vai/dpuv1/rt/vitis/: README.md
vai/dpuv1/rt/vitis/cmake/: XilinxCommon.cmake
vai/dpuv1/rt/vitis/src/: CMakeLists.txt
vai/dpuv1/utils/postproc/: yolo.py
weight/: _iter_121.solverstate
workspace/: Makefile  run.sh
workspace/compiler/unet1/: meta.json
workspace/compiler/unet3/: md5sum.txt  meta.json  unet3_fix.txt
workspace/dataset1/: calib_list.txt
workspace/model/: compiler.json  meta.json  quantizer.json
workspace/src/: main.cc
workspace/tf_chkpts/unet1/: checkpoint  float_model.ckpt.index  freeze.py  infer_graph.pb  meta.json  unet1_fix.txt  vaicompiler.py
(+15 files in other folders)
